Update Noticias “2021-06-17-ejemplo”

--- a/src/pages/blog/2021-06-17-ejemplo.md
+++ b/src/pages/blog/2021-06-17-ejemplo.md
@@ -10,7 +10,7 @@ featuredpost: true
 featuredimage: /img/arturo5.jpg
 isVideo: true
 video: <iframe width="560" height="315"
-  src="https://www.youtube.com/embed/CFPLIaMpGrY" title="YouTube video player"
+  src="https://www.youtube.com/embed/J-xNRRoM9mU" title="YouTube video player"
   frameborder="0" allow="accelerometer; autoplay; clipboard-write;
   encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 ---
