Update Noticias “2021-06-17-ejemplo”

--- a/src/pages/blog/2021-06-17-ejemplo.md
+++ b/src/pages/blog/2021-06-17-ejemplo.md
@@ -7,7 +7,7 @@ category:
 header: '"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
   consectetur, adipisci velit..."'
 featuredpost: true
-featuredimage: /img/arturo5.jpg
+featuredimage: /img/products-full-width.jpg
 isVideo: true
 video: <iframe width="560" height="315"
   src="https://www.youtube.com/embed/J-xNRRoM9mU" title="YouTube video player"
